[CW8]
* Don't show null in the log if the responses' info is null.
* AddCommand message: set an existing icon by default.

[CW7]
* Fix displaying the success flag, info, and result code of the messages in the log.
* Fix displaying long messages in the log on narrow screens.
* Don't drop the connection to the core when pressing the Back button. Now, to disconnect use the Exit options menu item.
+ Show message's correlation ID in the Raw JSON popup.
* Update the turn list icons.
* SyncProxyAndroid SDK: when serializing a JSON RPCMessage, serialize hashtable as RPCStruct. Fix for the XML Test feature in SyncProxyTester.
- Revert: "SyncProxyAndroid SDK: Interim fix: revert the change of protocol v2 JSON messages (the "parameters" key) until the AppLinkCore has changed the parser."
* Fix a crash when trying to open Speak dialog.
* SyncProxyAndroid SDK: Interim fix: revert the change of protocol v2 JSON messages (the "parameters" key) until the AppLinkCore has changed the parser.
- SyncProxyAndroid SDK: remove MP3 and WAV values from the AudioType enum (affects AudioPassThru).
* Don't add/remove submenu from SubMenu list until a successful AddSubMenuResponse/DeleteSubMenuResponse has come.
* Ford Commit:
  1) Update module test functionality and example xml script. Place xml script on root of sdcard to deploy.
  2) AudioCaptureQuality has been renamed to BitsPerSample (effects PerformAudioPassThru)
  3) AudioType enum - WAV and MP3 have been removed from (effects PerformAudioPassThru)
  4) Incorrect AppLink Protocol 2 JSON message. Current code includes a "parameters" key that shouldn't be there. Ex. current: {"parameters":{…}} should be {…} This effects all AppLink Protocol 2 messages and is particularly harmful to OnAudioPassThru notification because it will ONLY have binary data and no JSON anymore.
* Policies test: show errors as toasts, instead of adding to the console.

[CW6]
* ButtonSubscriptions dialog: exclude ButtonName.CUSTOM_NAME value.